tests/error/enum_errors/use_enum_class4.err
Error: Attribute not found (at $FILE:14:18)
   | 
12 | @guppy
13 | def fun() -> str:
14 |     return MyEnum.method()
   |                   ^^^^^^ `MyEnum` has no variant `method`

Guppy compilation failed due to 1 previous error
